[project]
name = "pyspark-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pyspark>=3.5.5",
    "ruff>=0.11.0",
    "seaborn>=0.13.2",
    "setuptools>=76.0.0",
]
